cleaning up some things, working on coverage. I think I've discovered a few spots where there is now dead code